--- a/redux/redux-ts-ecommerce/src/components/css/products.css
+++ b/redux/redux-ts-ecommerce/src/components/css/products.css
@@ -1,4 +1,5 @@
-.products-page{
-    height: calc(100vh - 10vh);
-    background-color: whitesmoke;
+.products-card-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
