--- a/redux/redux-ts-ecommerce/src/components/scss/cart.scss
+++ b/redux/redux-ts-ecommerce/src/components/scss/cart.scss
@@ -1,6 +1,5 @@
 .cart-container {
-    display: flex;
+    @include flexCenter(row);
     justify-content: space-around;
-    align-items: center;
     flex-wrap: wrap;
 }
