--- a/redux/redux-ts-ecommerce/src/components/scss/navbar.css
+++ b/redux/redux-ts-ecommerce/src/components/scss/navbar.css
@@ -1,15 +1,35 @@
 .navbar {
   width: 100%;
   height: 10vh;
-  background-color: yellow;
+  background-color: yellowgreen;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
-/*# sourceMappingURL=navbar.css.map */
+
+.navbar a {
+  font-weight: bold;
+  font-size: larger;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
+}
+
+.navbar a:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
