--- a/redux/redux-ts-ecommerce/src/components/scss/navbar.scss
+++ b/redux/redux-ts-ecommerce/src/components/scss/navbar.scss
@@ -1,8 +1,16 @@
-.navbar{
+
+.navbar {
     width: 100%;
     height: 10vh;
-    background-color: yellow;
-    display: flex;
+    background-color: $nav-bg-color;
+    @include flexCenter(row);
     justify-content: space-evenly;
-    align-items: center;
+    a{
+        font-weight: bold;
+        font-size: larger;
+        transition: transform 0.2s;
+        &:hover{
+            transform: scale(1.1);
+        }
+    }
 }
